[package]
name = "terminal_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = "4.5.42"
futures-util = { version = "0.3.31", features = ["sink"] }
serde = {version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.41.1" , features = ["full"]}
tokio-util = {version = "0.7.16", features = ["codec"]}
